--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "express": "^4.18.2",
     "nodemon": "^3.0.2",
     "pg": "^8.11.3"
+  },
+  "dependencies": {
+    "dotenv": "^16.3.1"
   }
 }
